2013-12-11  Andy Buckley  <andy.buckley@cern.ch>

	* Removing checking for and linking against Boost filesystem and system libs!

	* Replacing use of boost::filesystem::path and functions with
	home-made versions.

	* Adding use of a built-in yaml-cpp (0.3.0) if --with-yaml-cpp (or
	similar configure flags) are not specified.

	* Using intermediate static libs to build the source files that
	depend on YAML and Boost path stuff separately from the others.

2013-11-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding -Qunused-arguments to CPPFLAGS (to keep clang++ quiet).

2013-11-04  Andy Buckley  <andy.buckley@cern.ch>

	* Removing OpenMP directives: the One Definition Rule makes this
	usage dangerous/illegal, and I think we've agreed among developers
	to leave decisions about how to multithread up to the user for
	their specific case.

2013-10-28  Andy Buckley  <andy.buckley@cern.ch>

	* tests/: adding testing of all available PDF sets' central info systems.

	* Factories.*: mkPDFInfo now returns PDFInfo* rather than Info*.

2013-10-18  Andy Buckley  <andy.buckley@cern.ch>

	* Adding OpenMP directives to all-flavour functions in PDF.h. I
	don't see a big speed difference in profiling, though: -Ofast
	gives a much bigger speed-up.

2013-10-10  Andy Buckley  <andy.buckley@cern.ch>

	* Small improvements to the banner messages when loading a whole PDF set.

2013-10-09  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.0.4 release.

	* Being a wee bit smart and dropping the verbosity level
	temporarily when loading a whole set, to avoid flooding the
	terminal.

	* Tweaking banner and PDF printouts.

	* Adding verbosity() and setVerbosity() functions.

2013-10-07 James Ferrando <james.ferrando@cern.ch>

	* Fixed handling of Fortran string-in-common-block objects in the initPDFSet routine

	* Added missing initPDFSet variants w.r.t. lhapdf5.

2013-10-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding banner printout if Verbosity > 0, and extra arg on
	print() methods.
