@@ -125,7 +125,7 @@ fi
 
 
 ## Boost utility library
-BOOST_REQUIRE([1.49.0])
+BOOST_REQUIRE([1.41.0])
 BOOST_FOREACH
 BOOST_SMART_PTR
 BOOST_STRING_ALGO
